adding aditionanl style

--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
-﻿@import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");
+﻿/* ==================================================================================
+                Style Start 
+ ====================================================================================*/
+/* ==================================================================================
+                Google Font Link 
+ ====================================================================================*/
+@import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");
 body {
 	background-color: #151515;
 	color: white;
 }
+/* ==================================================================================
+                Header Section Style Start 
+ ====================================================================================*/
 .header-container {
 	background-color: #0d0d0d;
 	margin-bottom: 50px;
@@ -20,16 +29,37 @@ body {
 	padding-top: 10px;
 	font-size: 20px;
 }
+/* ==================================================================================
+                Header Section Style End 
+ ====================================================================================*/
+
+/* ==================================================================================
+                Player Section Style Start 
+ ====================================================================================*/
 .player-info {
 	background-color: #0d0d0d;
 	padding: 10px;
 }
+/* ==================================================================================
+                Player Section Style End 
+ ====================================================================================*/
+
+/* ==================================================================================
+                Calculation Section Style Start 
+ ====================================================================================*/
 .budget-container {
 	background-color: #0d0d0d;
 }
 .select-player-list {
 	background-color: #0d0d0d;
 }
+/* ==================================================================================
+                Calculation Section Style End 
+ ====================================================================================*/
+
+/* ==================================================================================
+                Footer Section Style Start 
+ ====================================================================================*/
 footer {
 	height: 80px;
 }
@@ -37,3 +67,9 @@ footer p {
 	padding-top: 20px;
 	text-align: center;
 }
+/* ==================================================================================
+                Footer Section Style End 
+ ====================================================================================*/
+/* ==================================================================================
+                Style End 
+ ====================================================================================*/
