--- a/style.css
+++ b/style.css
@@ -53,6 +53,9 @@ body {
 .select-player-list {
 	background-color: #0d0d0d;
 }
+.total-amount {
+	color: #ff5e19;
+}
 /* ==================================================================================
                 Calculation Section Style End 
  ====================================================================================*/
